k8s/address-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: address-service
  namespace: ems-prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: address-service
  template:
    metadata:
      labels:
        app: address-service
    spec:
      containers:
      - name: address-service
        image: ashishujjwal/address:latest
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: address-service
  namespace: ems-prod
spec:
  selector:
    app: address-service
  ports:
    - port: 8082
      targetPort: 8082
