k8s/employee-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-service
  namespace: ems-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-service
  template:
    metadata:
      labels:
        app: employee-service
    spec:
      containers:
      - name: employee-service
        image: ashishujjwal/employee:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: employee-service
  namespace: ems-prod
spec:
  selector:
    app: employee-service
  ports:
    - port: 8081
      targetPort: 8081
