k8s/eureka-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
      - name: eureka-server
        # Make sure this matches your Docker Hub username if it is not ashishujjwal
        image: ashishujjwal/eurekaserver:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
spec:
  selector:
    app: eureka-server
  ports:
    - port: 8761
      targetPort: 8761
      nodePort: 30001
  type: NodePort
