k8s/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-server
  namespace: ems-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-server
  template:
    metadata:
      labels:
        app: mysql-server
    spec:
      containers:
      - name: mysql-server
        image: mysql:8.0
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-server
  namespace: ems-prod
spec:
  selector:
    app: mysql-server
  ports:
    - port: 3306
      targetPort: 3306
