k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-server
  namespace: ems-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-server
  template:
    metadata:
      labels:
        app: redis-server
    spec:
      containers:
      - name: redis-server
        image: redis:alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-server
  namespace: ems-prod
spec:
  selector:
    app: redis-server
  ports:
    - port: 6379
      targetPort: 6379
